0.1.5
    * add config options for voxl2 mini & m0188
0.1.4
    * -t small fix
0.1.3
    * add test option to voxl-inspect-rangefinders
    * mods for M0157
0.1.2
    * add config option for rangefinders on M0173
0.1.1
    * update direction vector and location for downward sensor
0.1.0
    * add publishing downward rangefinder to mavlink
0.0.4
    * ignore double layer dependencies for linking
0.0.3
    * auto restart on failure
    * cleanup inspect tool
    * set orientations for the 4_on_M0141 config
0.0.2
    * both 4 and 1 working
0.0.1
    * First commit